# netbox-automation-plugin

./: .gitignore  BASELINE_COLLECTION_DETAILS.md  COMMIT_CONFIRM_FIX.md  CUMULUS_NVUE_COMMANDS_REFERENCE.md  DEPLOYMENT_FAILURE_ANALYSIS.md  DOCKER_BUILD_TROUBLESHOOTING.md  Netbox-MAAS-OS-SYNC-Design.md  README.md  RUN_ANALYSIS.md  RUN_BR_DEFAULT_CHECK.md  SAMPLE_DRY_RUN_OUTPUT.md  TEST_CHECKLIST_VLAN_DEPLOYMENT_FIXES.md  VLAN_DEPLOYMENT_ANALYSIS.md  analyze_b52_network.py  check_br_default_vlans.py  check_prod_netbox_vlans.py  color_test.html  dark_mode_preview.html  pyproject.toml  test_cumulus_parsing.py
netbox_automation_plugin/: __init__.py  models.py  napalm_integration.py  navigation.py  netbox_automation_plugin.py  nornir_integration.py  requirements.txt  urls.py
netbox_automation_plugin/api/: __init__.py  serializers.py
netbox_automation_plugin/core/: __init__.py  napalm_integration.py  nornir_integration.py
netbox_automation_plugin/integrations/: __init__.py  branching_diff_object_column_patch.py  netbox_branching_router_patch.py
netbox_automation_plugin/management/commands/: reconciliation_reset_stuck_apply.py
netbox_automation_plugin/migrations/: 0001_initial.py  0002_vlandeploymentjob.py  0003_maasopenstackdriftrun.py  0004_maasopenstackdriftrun_review_overrides.py  0005_maasopenstackdriftrun_modified_xlsx.py  0006_maasopenstackreconciliationrun.py  0007_remove_vlan_created_by_dup_index.py  0008_rename_indexes_max_30.py  0009_align_netboxmodel_base_fields.py  0010_add_netboxmodel_tags.py  0011_reconciliation_branch_not_ready_status.py  __init__.py
netbox_automation_plugin/sync/: CONFIG.md  DRIFT_DESIGN.md  __init__.py  tenancy_netbox_compat.py
netbox_automation_plugin/sync/clients/: __init__.py  maas_client.py  maas_lldp.py  netbox_client.py  openstack_client.py
netbox_automation_plugin/sync/config/: __init__.py  settings.py
netbox_automation_plugin/sync/models/: __init__.py  maas_models.py  netbox_models.py  openstack_models.py
netbox_automation_plugin/templatetags/: __init__.py  branching_ui.py
netbox_automation_plugin/workflows/: __init__.py
scripts/: debug_ui_scope_domain_logic.py  find_birch_mixed_fabric_hosts.py  inspect_maas_os_nic_metadata.py  list_openstack_allocation_pools.py  list_openstack_hosts_and_nodes.py  match_openstack_maas_hypervisors.py  probe_host_network_apis.py  validate_reconciliation_values.py
test_venv/: pyvenv.cfg
(+101 files in other folders)
